Admin-portal-V2 :sparkles:  Added the stored policy api